# HousingElementReviewLettersScraper

./: DataAnalysis.ipynb  README.md  data.csv  data.json  data_updated.csv  extractpdf.py  he-review-letters.xlsx  pdfDownloader.py  pyproject.toml
HousingElementReviewLettersScraper/: extractpdf.py
data/: 6th-cycle-rhna-progress.csv  data.csv  data_updated.csv
notebook/: DataAnalysis.ipynb
pdfs/: fre-fowler-draft-out-122623.pdf.crdownload  fre-huron-draft-out-011824.pdf.crdownload  fre-selma-draft-out-032724.pdf.crdownload
