[tool.poetry]
name = "housing elemenr review letter scraper"
version = "0.1.0"
description = ""
authors = ["Anne Nicole P. Hipolito <anhipolito01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyMuPDF = "^1.24.11"
census = "^0.8.22"
pandas = "^2.2.1"
numpy = "^1.24.3"
matplotlib = "^3.8.3"
selenium = "^4.22.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
